// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkSelect should render correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomWidth": 1,
      "borderColor": "rgb(230, 228, 235)",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 4,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with "showImage" and image 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomWidth": 1,
      "borderColor": "rgb(230, 228, 235)",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 4,
    }
  }
>
  <Image
    style={
      Array [
        undefined,
        Object {
          "backgroundColor": "rgb(243, 242, 245)",
          "height": 12,
          "marginEnd": 8,
          "width": 16,
        },
      ]
    }
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with "showImage" and no image 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomWidth": 1,
      "borderColor": "rgb(230, 228, 235)",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 4,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgb(243, 242, 245)",
        "height": 12,
        "marginEnd": 8,
        "width": 16,
      }
    }
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with a text label 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomWidth": 1,
      "borderColor": "rgb(230, 228, 235)",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 4,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with an element label 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomWidth": 1,
      "borderColor": "rgb(230, 228, 235)",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 4,
    }
  }
>
  <View />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with custom styles 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomWidth": 1,
      "borderColor": "rgb(230, 228, 235)",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 4,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with the disabled prop 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderBottomWidth": 1,
      "borderColor": "rgb(230, 228, 235)",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingVertical": 4,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          Object {
            "color": "rgb(230, 228, 235)",
          },
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;
